[gd_scene load_steps=14 format=3 uid="uid://diqxa3b3s37tu"]

[ext_resource type="Texture2D" uid="uid://k5ekhwtlqtt6" path="res://assets/images/menu_bg.jpg" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://btx5mwvc8r2fb" path="res://scripts/main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://d0k8ujgdctogn" path="res://assets/fonts/Creepy Night.ttf" id="2_7vrkn"]
[ext_resource type="AudioStream" uid="uid://cro7ysutvmba8" path="res://assets/music/Remose [Nightclub Version].mp3" id="4_jix8l"]
[ext_resource type="Script" uid="uid://c8s2l072vcfa3" path="res://audio_control.gd" id="5_glbon"]
[ext_resource type="Script" uid="uid://bb8kc3iqvhurv" path="res://full_screen.gd" id="6_nlkkf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_7vrkn")
modulate_color = Color(0.277528, 0.277528, 0.277528, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.674815, 0.674815, 0.674815, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.187176, 0.187176, 0.187176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nlkkf"]
color = Color(0.59534, 0.168574, 0.325199, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 112.0
offset_right = 882.0
offset_bottom = 249.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 100
text = "Just Another Day"

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -53.0
offset_right = 166.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 11

[node name="start" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start game"

[node name="settings" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options
"

[node name="exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Exit"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"Music"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -82.0
offset_right = 196.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 8.5
offset_right = 59.0
offset_bottom = 63.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="back" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 41.0
offset_top = 202.0
offset_right = 342.0
offset_bottom = 258.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Back"

[node name="AudioControl" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 20.0
offset_top = 81.0
offset_right = 316.0
offset_bottom = 100.0
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_nlkkf")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_glbon")
audio_bus_name = "Music"

[node name="FullScreen" type="CheckButton" parent="Settings"]
layout_mode = 0
offset_left = 43.0
offset_top = 112.0
offset_right = 327.0
offset_bottom = 158.0
text = "FullScren"
script = ExtResource("6_nlkkf")

[connection signal="pressed" from="MainButtons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Settings/AudioControl" to="Settings/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Settings/FullScreen" to="Settings/FullScreen" method="_on_toggled"]
